Added pages for project-based config

--- a/global-config.html
+++ b/global-config.html
@@ -33,7 +33,7 @@
 			<section id="sections">
 				<a href="index.html" class="btn">Home</a>
 				<a href="global-config.html" class="btn">Global Config</a>
-				<!-- a href="project-config.html" class="btn">Project Config</a-->
+				<a href="project-config.html" class="btn">Project Config</a>
 			</section>
 
 			<hr />
@@ -100,6 +100,10 @@
       "source.clojure"
    ]
 }</pre>
+
+			<p>
+				<a href="project-config.html">Next &gt;&gt;</a>
+			</p>
 		</section>
 	</div>
 
