--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section id="sections">
 				<a href="index.html" class="btn">Home</a>
 				<a href="global-config.html" class="btn">Global Config</a>
-				<!--a href="project-config.html" class="btn">Project Config</a-->
+				<a href="project-config.html" class="btn">Project Config</a>
 			</section>
 
 			<hr />
@@ -79,6 +79,10 @@ function getData($id) {
 				take you to and highlight the line of code.
 			</p>
 		</section>
+
+		<p>
+			<a href="global-config.html">Next &gt;&gt;</a>
+		</p>
 	</div>
 
 	<script src="javascripts/syntaxhighlighter.min.js"></script>
